add Gets for controllers & try to configure Spring secure with jwt tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jbc:postgresql://localhost:5432/maydatabase
+spring.datasource.username=myuser
+spring.datasource.password=mysecretpassword
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
